fixed teaxt area extra space issue

--- a/my-app/src/app/teat-area-space-issue/teat-area-space-issue.component.scss
+++ b/my-app/src/app/teat-area-space-issue/teat-area-space-issue.component.scss
@@ -5,6 +5,8 @@
     display: none;
 }
 
-::ng-deep .mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align {
-    height: 5px !important;
+::ng-deep .custom-text-area {
+    .mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align {
+        height: 5px !important;
+    }
 }
